<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="36dp">

            <AutoCompleteTextView
                android:id="@+id/end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:hint="@string/end_location"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="#757575"
                android:backgroundTint="@color/white"/>

            <ImageButton
                android:id="@+id/button_generate_route"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/generate_route" />

        </RelativeLayout>

    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:padding="16dp">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/button_start_simulation"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_play"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/start_simulation" />

                    <ImageButton
                        android:id="@+id/button_stop_simulation"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_pause"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/stop_simulation" />

                </LinearLayout>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:columnCount="4"
                    android:rowCount="8">
                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dist_ncia" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/total_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dura_o" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velocidade_m_dia" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/average_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velocidade" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/current_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velocidade_desejada" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/optmal_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dist_ncia_percorrida" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/current_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo_atual" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumo" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/fuel_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StyledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eficiencia" />

                <TextView
                    style="@style/StyledTextView"
                    android:id="@+id/eficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </GridLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        </HorizontalScrollView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
